@@ -29,6 +29,7 @@ o minor fix of the manpage (Max Wilhelm)
 o remove (misleading) counters and use information from the statistics mode
 o use generic nfct_copy() from libnetfilter_conntrack to update objects
 o use generic nfct_cmp() to compare objects
+o improve network message sanity checkings
 
 version 0.9.6 (2008/03/08)
 ------------------------------
